--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,15 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>4.1.7.RELEASE</version>
+      <version>4.3.17.RELEASE</version>
     </dependency>
-
+    
+<!--     <dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-core</artifactId>
+  <version>[4.3.17,)</version>
+</dependency>
+ -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
